--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # URL
   inspire-hep      : # URL
   impactstory      : # URL
   orcid            : "http://orcid.org/0009-0001-0812-2585"
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # szu-ju-chen
+  linkedin         : szu-ju-chen
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
