change basic settings

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "me.jpg"
   name             : "Szu-Ju Chen"
   pronouns         : # example: "she/her"  
-  bio              : "CS student graduated from National Taiwan University"
+  bio              : "Software Engineer @ Google | B.S. in Computer Science, National Taiwan University"
   location         : "Taiwan"
   employer         : # 
   uri              : # URL
