--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "me.jpg"
   name             : "Szu-Ju Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Software Engineer @ Google <br>B.S. in Computer Science, National Taiwan University"
+  bio              : "Software Engineer @ Google <br>B.S. in Computer Science"
   location         : "Taipei, Taiwan"
   employer         : # 
   uri              : # URL
