--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Home"
+title                    : "Szu-Ju Chen"
 title_separator          : "-"
 name                     : &name "Szu-Ju Chen"
 description              : &description "Software Engineer at Google | B.S. in Computer Science, National Taiwan University"
