--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title                    : "Szu-Ju Chen"
-title_separator          : "-"
+title_separator          : ""
 name                     : &name "Szu-Ju Chen"
 description              : &description "Software Engineer at Google | B.S. in Computer Science, National Taiwan University"
 url                      : https://szujuchen.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
