--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,11 @@ main:
   - title: "Projects"
     url: /projects/
 
-  - title: "Experiences"
-    url: /experiences/    
+  - title: "Research"
+    url: /research/
+
+  - title: "Work"
+    url: /work/    
 
   - title: "Awards"
     url: /awards/    
