change activities tab and add content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@ main:
   - title: "Awards"
     url: /awards/    
     
-  - title: "Interests"
-    url: /interests/
+  - title: "Activities"
+    url: /activities/
     
   - title: "CV"
     url: /files/CV.pdf
